feat(java): row format supports Record types (#2256)
## What does this PR do?

Support Record types in row format

Treated as Bean types, except we have to use canonical constructor
instead of unsafe field setting

Test only runs on Java 17+

## Does this PR introduce any user-facing change?

New type support in java row format

- [ ] Does this PR introduce any public API change?
- [ ] Does this PR introduce any binary protocol compatibility change?